refactor: ArrayList를 List로 변경하여 다형성 확보