@@ -1,11 +1,11 @@
 package study.step3.common;
 
-import java.util.ArrayList;
+import java.util.List;
 
 public class StringUtils {
     private StringUtils() {}
 
-    public static ArrayList<String> splitByComma(String str) {
-        return new ArrayList<>(java.util.Arrays.asList(str.split(",".trim())));
+    public static List<String> splitByComma(String str) {
+        return List.of(str.split(",".trim()));
     }
 }
