@@ -5,9 +5,7 @@ import study.step3.common.RandomNumber;
 import study.step3.domain.game.Game;
 import study.step3.domain.game.PlayerName;
 
-
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -15,7 +13,7 @@ public class RacingGameTest {
 
     @Test
     void 게임_생성() {
-        Game game = new Game(new PlayerName("PLAYER_NAME"), new ArrayList<>(Arrays.asList("Formula", "IndyCar")), 5);
+        Game game = new Game(new PlayerName("PLAYER_NAME"), List.of("Formula", "IndyCar"), 5);
         assertThat(game.getStringName()).isEqualTo("PLAYER_NAME");
         assertThat(game.getCars()).hasSize(2);
         assertThat(game.getRaceCount()).isEqualTo(5);
